# libphotostat

./: README.md  meson.build
.github/workflows/: build.yml
src/: AbstractOperation.vala  Image.vala  library.vala  meson.build
src/ImageIO/: Displayer.vala  Reader.vala  Writer.vala
src/PointOps/: BrightnessContrast.vala  Inversion.vala
src/Utils/: Maths.vala  Rectangle.vala
tests/: copy_resources.py  meson.build  test_main.vala
tests/ImageIO/: test_Reader.vala  test_Writer.vala
tests/PointOps/: test_BrightnessContrast.vala  test_Inversion.vala
